<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_dialog_email"
        android:contentDescription="TODO" />

    <!-- Main body of UI -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="117dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="117dp"
            android:text="@string/connect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conn_status"
            android:textAlignment="center"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_first" />


        <Button
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:enabled="false"
            android:text="@string/stop"
            app:layout_constraintBottom_toTopOf="@+id/button_back"
            app:layout_constraintEnd_toStartOf="@+id/button_right"
            app:layout_constraintStart_toEndOf="@+id/button_left"
            app:layout_constraintTop_toBottomOf="@+id/button_forward" />

        <Button
            android:id="@+id/button_forward"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="147dp"
            android:enabled="false"
            android:text="@string/forward"
            android:textAlignment="center"
            app:icon="@drawable/up_arrow"
            app:iconGravity="textTop"
            app:iconPadding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />

        <Button
            android:id="@+id/button_right"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:drawableEnd="@drawable/arrow"
            android:enabled="false"
            android:insetRight="0dp"
            android:text="@string/right"
            android:textAlignment="center"
            app:icon="@drawable/arrow"
            app:iconGravity="textEnd"
            app:iconPadding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button_stop"
            app:layout_constraintTop_toTopOf="@+id/button_stop" />

        <Button
            android:id="@+id/button_back"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginEnd="147dp"
            android:layout_marginBottom="350dp"
            android:enabled="false"
            android:text="@string/back"
            android:textAlignment="center"
            app:icon="@drawable/down_arrow"
            app:iconGravity="textTop"
            app:iconPadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_stop" />

        <Button
            android:id="@+id/button_left"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:enabled="false"
            android:text="@string/left"
            app:icon="@drawable/left_arrow"
            app:iconPadding="5dp"
            app:layout_constraintEnd_toStartOf="@+id/button_stop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_stop" />

        <Button
            android:id="@+id/button_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:enabled="false"
            android:text="@string/down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_up" />

        <Button
            android:id="@+id/button_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="28dp"
            android:enabled="false"
            android:text="@string/up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_right" />

        <TextView
            android:id="@+id/textViewRx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/readBuffer"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/button_down" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="16dp"
            android:text="@string/Rx"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_down" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>